--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^17.0.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "node-dijkstra": "^2.5.0",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7"
   },
@@ -21,6 +22,7 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.0.7",
+    "@types/node-dijkstra": "^2.5.6",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   }
